syntax = "proto3";

package protoGreet;

service Greeter {
  rpc determineKeyRange(KeyRange) returns (DummyText) {}
  rpc assignID(GreeterRequest) returns (ID) {}
  
}

message KeyRange {
  string minKey = 1;
  string maxKey = 2;
}

message GreeterRequest {
  string greeting = 1;
}

message ID {
  int32 id = 1;
}

message DummyText {
  string dummyText = 1;
}